# frigate-snap-sync

./: Cargo.toml  README.md  config.yaml.example
.github/workflows/: build.yml  docker.yml  lints.yml
docker/: docker-compose.yaml.example
docker/image-snap-sync/: Dockerfile  build-and-push.sh
file-sender/: Cargo.toml
file-sender/src/: lib.rs  mocks.rs  path_descriptor.rs  store_local.rs  store_sftp.rs  store_virtual.rs  tests.rs  traits.rs
file-sender/src/store_sftp/: blocking.rs  mod.rs
frigate-api-caller/: Cargo.toml
frigate-api-caller/src/: config.rs  helpers.rs  lib.rs  mocks.rs  traits.rs
frigate-api-caller/src/json/: mod.rs  review.rs  stats.rs
logging/: Cargo.toml
logging/src/: lib.rs  log_style.rs  tracing_utils.rs  utils.rs
mocks/: Cargo.toml
mocks/src/: frigate_api.rs  lib.rs  store_dest.rs
mqtt-handler/: Cargo.toml
mqtt-handler/src/: config.rs  lib.rs
mqtt-handler/src/types/: mod.rs  recordings_state.rs  snapshot.rs  snapshots_state.rs
mqtt-handler/src/types/reviews/: mod.rs  payload.rs
options/: Cargo.toml
options/src/: lib.rs
options/src/run_options/: mod.rs  start_options.rs
randomness/: Cargo.toml
src/: config.rs  main.rs
src/mqtt_handler/: mod.rs
src/mqtt_handler/types/: mod.rs  recordings_state.rs  snapshot.rs  snapshots_state.rs  utils.rs
sync-system/: Cargo.toml
sync-system/src/: config.rs  lib.rs  runner.rs  state.rs
sync-system/src/system/: common.rs  mod.rs  snapshot_task.rs  snapshot_upload_task.rs  tests.rs  traits.rs
sync-system/src/system/common/: file_senders.rs  file_upload.rs  mod.rs  time.rs
sync-system/src/system/recording_upload_handler/: mod.rs  tests.rs
sync-system/src/system/recording_upload_handler/task/: mod.rs  tests.rs
sync-system/src/system/recording_upload_handler/task/file_upload/: mod.rs  review_with_clip.rs  tests.rs
sync-system/src/system/recording_upload_task/: mod.rs  task.rs  tests.rs
sync-system/src/system/recording_upload_task/task/: file_upload.rs  mod.rs  tests.rs
sync-system/src/system/recording_upload_task/task/file_upload/: mod.rs  review_with_clip.rs  tests.rs
sync-system/src/system/snapshot_upload_task/: mod.rs  task.rs  tests.rs
test-utils/: Cargo.toml
test-utils/src/: asserts.rs  random.rs
utils/: Cargo.toml
utils/src/: eq.rs  lib.rs  podman.rs  struct_name.rs  time.rs  time_getter.rs
