
[package]
name = "frigate-video-sync"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "logging",
    "mqtt-handler",
    "randomness",
    "test-utils",
]

[dependencies]
anyhow = { workspace = true }
serde_yml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

logging = { workspace = true }
mqtt-handler = { workspace = true }

[dev-dependencies]
randomness = { workspace = true }
rstest = { workspace = true }
test-utils = { workspace = true }

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.10"
image = "0.25"
log = "0.4"
rand_chacha = "0.9"
serde = "1.0"
serde_yml = "0.0"
tap = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", default-features = false }
tracing-subscriber = "0.3"
tracing = "0.1"
rstest = "0.25"
rumqttc = "0.24.0"


logging = { path = "logging" }
mqtt-handler = { path = "mqtt-handler" }
randomness = { path = "randomness" }
test-utils = { path = "test-utils" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
