
[package]
name = "frigate-video-sync"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "file-sender",
    "frigate-api-caller",
    "logging",
    "mqtt-handler",
    "randomness",
    "sync-system",
    "test-utils",
]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }

file-sender = { workspace = true }
logging = { workspace = true }
mqtt-handler = { workspace = true }
sync-system = { workspace = true }

[dev-dependencies]
randomness = { workspace = true }
rstest = { workspace = true }
test-utils = { workspace = true }

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.10"
chrono = "0.4"
ctrlc = "3.4"
futures = "0.3"
humantime = "2.2"
image = "0.25"
itertools = "0.14"
libssh2-sys = "0.3"
log = "0.4"
mockall = "0.13"
rand_chacha = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_yml = "0.0"
tap = "1.0"
tempfile = "3.19"
thiserror = "2.0"
tokio = { version = "1.44", default-features = false }
tracing-subscriber = "0.3"
tracing = "0.1"
reqwest = "0.12"
rstest = "0.25"
rumqttc = "0.24.0"
ssh2 = "0.9"
vfs = "0.12"


file-sender = { path = "file-sender" }
frigate-api-caller = { path = "frigate-api-caller" }
logging = { path = "logging" }
mqtt-handler = { path = "mqtt-handler" }
randomness = { path = "randomness" }
sync-system = { path = "sync-system" }
test-utils = { path = "test-utils" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)

[profile.release]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)
overflow-checks = true
