[package]
name = "file-sender"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
libssh2-sys = { workspace = true }
ssh2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
