[package]
name = "frigate-api-caller"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow ={ workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json ={ workspace = true }
tokio ={ workspace = true, features = ["full"] }
tracing ={ workspace = true }

[dev-dependencies]
rstest ={ workspace = true }

[lints]
workspace = true
