[package]
name = "mqtt-handler"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true}

bytes = { workspace = true }
chrono = { workspace = true }
image = { workspace = true }
rumqttc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tap = { workspace = true }
tracing = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
randomness = { workspace = true }
rstest = { workspace = true }
test-utils = { workspace = true }

[lints]
workspace = true
