[package]
name = "sync-system"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
serde_yml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

file-sender = { workspace = true }
frigate-api-caller = { workspace = true }
logging = { workspace = true }
mqtt-handler = { workspace = true }

[lints]
workspace = true
