[package]
name = "sync-system"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
ctrlc = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
itertools = { workspace = true }
serde_yml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
utils = { workspace = true }

file-sender = { workspace = true }
frigate-api-caller = { workspace = true }
logging = { workspace = true }
mqtt-handler = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
mocks = { workspace = true }
test-utils = { workspace = true }
rstest = { workspace = true }


[lints]
workspace = true
