[package]
name = "test-utils"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
randomness = { workspace = true }
rand_chacha = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true }
