[package]
name = "utils"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
serial_test = { workspace = true }
tracing = { workspace = true }
randomness = { workspace = true }

[dev-dependencies]
test-utils = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
